# cloudsaver-ai

./: .gitignore  README.md  main.py  pyproject.toml
backend/: aws_costs_parsed.json  aws_costs_raw.json
backend/src/: api.py  auth.py  database.py  fetch_costs.py  mock_data.py  parse_costs.py
frontend/: package.json
frontend/src/: App.tsx  CostDashboard.tsx
